# shellraiser

./: LICENSE  README.md  bench.sh  benchmark.sh  pyproject.toml  shellraiser
.github/workflows/: publish.yml
misc/: logo.ai
runtime/: bash_runtime.c  bash_runtime.h
src/: bash_runtime.c  bash_runtime.h  shellraiser.py
src/runtime/: bash_runtime.c  bash_runtime.h
src/shellraiser/: cli.py
src/shellraiser/runtime/: bash_runtime.c  bash_runtime.h
tests/: conftest.py  test_arithmetic.py  test_arrays.py  test_assoc_arrays.py  test_builtins.py  test_cli.py  test_command_sub.py  test_control_flow.py  test_functions.py  test_integration_features.py  test_parser.py  test_pipelines.py  test_smoke.py  test_tokenizer.py  test_variables.py
